fix: se agrega -XX:+UseContainerSupport en imagen docker